ammed ChangePage Function

--- a/templates/second.html
+++ b/templates/second.html
@@ -1,11 +1,12 @@
 <html>
     <body>
       <script>
-        function myFunction() {
+        function ChangePage() {
           location.href="/" 
           //<button  onclick="myFunction()">index.html</button>
         }
         </script>
         <h1>Page changed</h1>
+        <button  onclick="ChangePage()">index.html</button>
     </body>
 </html>
