fix problem displaying all files on index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,17 @@
 <html>
     <head>
+        <style>
+            div.Invisible {
+                display: none;
+            }
+        </style>
     </head>
     <body>
         <div id="content"></div>
+        <div class="Invisible">
+            <div id="content2"></div>
+            <h1>HIDDEN</h1>
+        </div>
         <script type="text/javascript" src="/static/script.js"></script>
     </body>
 </html>
