--- a/templates/second.html
+++ b/templates/second.html
@@ -8,5 +8,7 @@
         </script>
         <h1>Page changed</h1>
         <button  onclick="ChangePage()">index.html</button>
+        <div id="content2"></div>
+        <script type="text/javascript" src="/static/script.js"></script>
     </body>
 </html>
