--- a/pages/styles.css
+++ b/pages/styles.css
@@ -36,6 +36,18 @@
     text-align: center;
 }
 
+.category_menu {
+    overflow-y: hidden;
+    background-color: #ffffff;
+    width: 175px;
+    height: 580px;
+    position: relative;
+    left: 0%;
+    top: 1%;
+    padding: 1px;
+    text-align: center;
+    float: left;
+}
 
 h1 { 
     font-family: "Century Gothic"; 
