fix problem with displaying pages

--- a/templates/main.html
+++ b/templates/main.html
@@ -7,12 +7,12 @@
         </style>
     </head>
     <body>
-        <h1>INDEX.HTML</h1>
+        <h1>MAIN.HTML</h1>
+        <a href="/">Click me to go to home page!</a>
         <div id="Content"></div>
         <div class="Invisible">
-            
-            
             <h1>HIDDEN</h1>
+            
         </div>
         <script type="text/javascript" src="/static/script.js"></script>
     </body>
