--- a/pages/styles.css
+++ b/pages/styles.css
@@ -35,6 +35,17 @@
     text-align: center;
 }
 
+.homepage_container {
+    overflow-y: auto;
+    padding: 5px;
+    background-color: #ffffff;
+    width: 75%;
+    height: 80%;
+    margin: auto;
+    text-align: left;
+    float: right;
+}
+
 .category_menu {
     overflow-y: hidden;
     background-color: #ffffff;
@@ -46,6 +57,16 @@
     padding: 1px;
     text-align: center;
     float: left;
+}
+
+.header_menu {
+    display: flex;
+    justify-content: space-between;
+    overflow-y: auto;
+    background-color: #ffffff;
+    width: 77%;
+    height: 10%;
+    margin: auto;
 }
 
 .goal_container {
