clean up navigation code

--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -6,10 +6,9 @@
         <script>
             function ChangePage() {
               location.href="/UserProfile" 
-              //<button  onclick="ChangePage()">index.html</button>
+              //<button  onclick="ChangePage()">UserProfile.html</button>
             }
         </script>
-        <button  onclick="ChangePage()">UserProfile.html</button>
         <div id="Content"></div>
         <script type="text/javascript" src="/static/script.js"></script>
     </body>
