--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,16 +1,10 @@
+
 :root {
     background-color: #ededed;
   }
 
 .root_container {
-    overflow-y: auto;
-    padding: 20px;
-    background-color: #ffffff;
-    border-radius: 12px;
-    width: 800px;
-    height: 630px;
-    margin: auto;
-    border: 1px solid black;
+
 }
 
 .button_container {
@@ -39,11 +33,11 @@
     overflow-y: auto;
     padding: 5px;
     background-color: #ffffff;
-    width: 75%;
+    width: 79%;
     height: 77%;
     margin: auto;
     text-align: left;
-    float: right;
+    left: 70%;
 }
 
 .category_menu {
@@ -64,9 +58,7 @@
     justify-content: space-between;
     overflow-y: auto;
     background-color: #ffffff;
-    width: 77%;
-    height: 10%;
-    margin: auto;
+    width: 100%;
 }
 
 .goal_container {
