--- a/pages/styles.css
+++ b/pages/styles.css
@@ -1,10 +1,18 @@
-
 :root {
     background-color: #ededed;
   }
 
 .root_container {
-
+    overflow-y: auto;
+    padding: 20px;
+    background-color: #ffffff;
+    border-radius: 12px;
+    width: 80%;
+    height: 80%;
+    margin: auto;
+    position: relative;
+    top: 50%;
+    border: 1px solid black;
 }
 
 .button_container {
@@ -14,7 +22,7 @@
     width: 300px;
     height: 45px;
     position: relative;
-    left: 62%;
+    left: 80%;
     padding: 1px;
     text-align: right;
 }
@@ -23,28 +31,28 @@
     overflow-y: auto;
     padding: 20px;
     background-color: #ffffff;
-    width: 90%;
+    width: 85%;
     height: 80%;
     margin: auto;
     text-align: center;
 }
 
-.homepage_container {
+.newsfeed_container {
     overflow-y: auto;
     padding: 5px;
     background-color: #ffffff;
-    width: 79%;
-    height: 77%;
+    width: 88%;
+    height: 80%;
     margin: auto;
     text-align: left;
-    left: 70%;
+    float: right;
 }
 
 .category_menu {
     overflow-y: hidden;
     background-color: #ffffff;
     width: 175px;
-    height: 580px;
+    height: 92%;
     position: relative;
     left: 0%;
     top: 1%;
@@ -58,17 +66,24 @@
     justify-content: space-between;
     overflow-y: auto;
     background-color: #ffffff;
-    width: 100%;
+    width: 88%;
+    height: 10%;
+    margin: auto;
 }
 
 .goal_container {
     overflow-y: auto;
     background-color: #ffffff;
     width: 40%;
-    height: 20%;
+    height: 25%;
     margin: auto;
     text-align: left;
     overflow-y: auto;
+}
+
+.avatar {
+    float: left;
+    padding: 8px;
 }
 
 h1 { 
@@ -103,7 +118,7 @@ h3 {
 
 body { 
     font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
-    font-size: 14px; 
+    font-size: 18px; 
     font-style: normal; 
     font-variant: normal; 
     font-weight: 400; 
@@ -113,7 +128,7 @@ body {
 
 b { 
     font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
-    font-size: 16px; 
+    font-size: 18px; 
     font-weight: bold;
     font-variant: normal; 
     line-height: 20px; 
