--- a/pages/styles.css
+++ b/pages/styles.css
@@ -13,6 +13,8 @@
     border: 1px solid black;
 }
 
+
+
 .button_container {
     overflow-y: hidden;
     background-color: #ffffff;
@@ -78,6 +80,17 @@
     text-align: left;
     overflow-y: auto;
 }
+
+/*.groupRedirect {*/
+/*    overflow-y: auto;*/
+/*    background-color: #ffffff;*/
+/*    width: 100px;*/
+/*    height: 50px;*/
+/*    margin: auto;*/
+/*    text-align: left;*/
+/*    overflow-y: auto;*/
+/*    border: 1px solid black;*/
+/*}*/
 
 h1 { 
     font-family: "Century Gothic"; 
